Adiciona uma main com um título h1 e um parágrafo teste

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>DCC202 - Atividade 5: João Victor Nicácio Silva</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 5: João Victor Nicácio Silva</h1>
+        <p>Teste</p>
+    </main>
 </body>
 </html>
