Adiciona links aos trechos das frases

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <h1>DCC202 - Atividade 5: João Victor Nicácio Silva</h1>
-        <p>Esta é a página principal do meu site sobre One Piece. Temos também a página sobre <a href="">personagens</a> e o quanto <a href="">gosto deles</a></p>
+        <p>Esta é a página principal do meu site sobre ONE PIECE. Temos também a página sobre <a href="personagens.html">personagens</a> e o quanto <a href="preferencias.html">gosto deles</a></p>
     </main>
 </body>
 </html>
