Finaliza página de personagens

--- a/personagens.html
+++ b/personagens.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DCC202 - Atividade 5 - Personagens: João Victor Nicácio Silva</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 5 - Personagens: João Victor Nicácio Silva</h1>
+        <p>Esta é a página sobre os personagens de One Piece. Temos também a página sobre <a href="preferencias.html">o quanto gosto</a> de cada um deles e a <a href="index.html">página principal</a>.</p>
+        <dl>
+            <div>
+                <dt>Zoro</dt>
+                <dd>Usa 3 espadas. Possui Haki do Rei e pode utilizar Haki do Armamento</dd>
+            </div>
+            <div>
+                <dt>Sanji</dt>
+                <dd>Cozinheiro que só luta utilizando os pés</dd>
+            </div>
+            <div>
+                <dt>Luffy</dt>
+                <dd>Pirata que comeu a Gomu Gomu no Mi</dd>
+            </div>
+        </dl>
+    </main>
 </body>
 </html>
