Inicia tabela de preferências

--- a/preferencias.html
+++ b/preferencias.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DCC202 - Atividade 5 - Preferências: João Victor Nicácio Silva</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 5 - Preferências: João Victor Nicácio Silva</h1>
+        <p>Esta é a página sobre minhas preferências entre os personagens. Temos também a página sobre <a href="personagens.html">personagens</a> e a <a href="index.html">página principal</a>.</p>
+        <table>
+            <th>Personagem</th>
+            <th>História</th>
+            <th>Design</th>
+            <th>Personalidade</th>
+            <th>Total</th>
+            <tbody>
+                
+            </tbody>
+        </table>
+    </main>
 </body>
 </html>
