--- a/preferencias.html
+++ b/preferencias.html
@@ -10,13 +10,35 @@
         <h1>DCC202 - Atividade 5 - Preferências: João Victor Nicácio Silva</h1>
         <p>Esta é a página sobre minhas preferências entre os personagens. Temos também a página sobre <a href="personagens.html">personagens</a> e a <a href="index.html">página principal</a>.</p>
         <table>
-            <th>Personagem</th>
-            <th>História</th>
-            <th>Design</th>
-            <th>Personalidade</th>
-            <th>Total</th>
+            <thead>
+                <th>Personagem</th>
+                <th>História</th>
+                <th>Design</th>
+                <th>Personalidade</th>
+                <th>Total</th>
+            </thead>
             <tbody>
-                
+                <tr>
+                    <td>Zoro</td>
+                    <td>Sua melhor amiga morreu</td>
+                    <td>Cabelo verde</td>
+                    <td>Nervoso e perdido</td>
+                    <td>Bom</td>
+                </tr>
+                <tr>
+                    <td>Sanji</td>
+                    <td>Criado como um erro científico de uma família de superhumanos sem sentimentos</td>
+                    <td>Terno e cabelo loiro</td>
+                    <td>Gentil</td>
+                    <td>Ótimo</td>
+                </tr>
+                <tr>
+                    <td>Luffy</td>
+                    <td>Seu pai é líder do exército revolucionário e sua mãe é desconhecida. Comeu a fruta da "borracha" quando criança</td>
+                    <td>Camiseta, bermuda e chinelo</td>
+                    <td>Feliz</td>
+                    <td>Capitão</td>
+                </tr>
             </tbody>
         </table>
     </main>
